--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "IDevilry",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^4.13.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2"
   },
@@ -19,6 +20,7 @@
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
     "nodemon": "^2.0.22",
+    "prisma": "^4.13.0",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
   }
