--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "npx tsc",
     "start": "node ./dist/index.js",
     "dev": "nodemon ./src/index.ts",
-    "test": "jest --coverage"
+    "test": "jest --coverage",
+    "lint": "npx eslint --fix ./src/**/*.ts"
   },
   "keywords": [],
   "author": "IDevilry",
@@ -25,7 +26,12 @@
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.1",
     "@types/node": "^18.15.11",
-    "@types/sinon": "^10.0.14",
+    "@typescript-eslint/eslint-plugin": "^5.59.1",
+    "eslint": "^8.39.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.5.0",
     "jest-mock-extended": "^3.0.4",
     "nodemon": "^2.0.22",
