--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,17 +11,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18.x
           cache: "npm"
       - name: Install deps
-      - run: npm ci
+        run: npm ci
       - name: Check lint
-      - run: npm run lint
+        run: npm run lint
       - name: Build
-      - run: npm run build
+        run: npm run build
       - name: Run tests
-      - run: npm test
+        run: npm test
