--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@types/express": "^4.17.17",
 		"@types/jest": "^29.5.1",
 		"@types/node": "^18.15.11",
+		"@types/supertest": "^2.0.12",
 		"@typescript-eslint/eslint-plugin": "^5.59.2",
 		"@typescript-eslint/parser": "^5.59.2",
 		"eslint": "^8.39.0",
@@ -35,6 +36,7 @@
 		"jest-mock-extended": "^3.0.4",
 		"nodemon": "^2.0.22",
 		"prisma": "^4.13.0",
+		"supertest": "^6.3.3",
 		"ts-jest": "^29.1.0",
 		"ts-node": "^10.9.1",
 		"typescript": "^5.0.4"
