--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
-		"build": "npx tsc --project tsconfig.json",
+		"build": "npx tsc --project tsconfig.build.json",
 		"start": "node ./dist/index.js",
 		"dev": "nodemon ./src/index.ts",
 		"test": "jest --coverage",
