--- a/package.json
+++ b/package.json
@@ -1,44 +1,34 @@
 {
-	"name": "travel-app-server",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"build": "npx tsc --project tsconfig.build.json",
-		"start": "node ./dist/index.js",
-		"dev": "nodemon ./src/index.ts",
-		"test": "jest --coverage",
-		"lint": "npx eslint --fix ./src/**/*.ts"
-	},
-	"keywords": [],
-	"author": "IDevilry",
-	"license": "ISC",
-	"dependencies": {
-		"@prisma/client": "^4.13.0",
-		"body-parser": "^1.20.2",
-		"cors": "^2.8.5",
-		"dotenv": "^16.0.3",
-		"express": "^4.18.2",
-		"helmet": "^6.1.5"
-	},
-	"devDependencies": {
-		"@types/cors": "^2.8.13",
-		"@types/express": "^4.17.17",
-		"@types/jest": "^29.5.1",
-		"@types/node": "^18.15.11",
-		"@types/supertest": "^2.0.12",
-		"@typescript-eslint/eslint-plugin": "^5.59.2",
-		"@typescript-eslint/parser": "^5.59.2",
-		"eslint": "^8.39.0",
-		"eslint-config-prettier": "^8.8.0",
-		"eslint-plugin-prettier": "^4.2.1",
-		"jest": "^29.5.0",
-		"jest-mock-extended": "^3.0.4",
-		"nodemon": "^2.0.22",
-		"prisma": "^4.13.0",
-		"supertest": "^6.3.3",
-		"ts-jest": "^29.1.0",
-		"ts-node": "^10.9.1",
-		"typescript": "^5.0.4"
-	}
+  "name": "vk-test-server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "build": "npx tsc --project tsconfig.build.json",
+    "start": "node ./dist/index.js",
+    "dev": "nodemon ./src/index.ts"
+  },
+  "keywords": [],
+  "author": "IDevilry",
+  "license": "ISC",
+  "dependencies": {
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "helmet": "^6.1.5",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^7.1.0"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "^18.15.11",
+    "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.0.4"
+  }
 }
